--- a/colorist/step_07/pubspec.yaml
+++ b/colorist/step_07/pubspec.yaml
@@ -1,6 +1,6 @@
 name: colorist
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -11,7 +11,6 @@ dependencies:
     sdk: flutter
   colorist_ui: ^0.0.6
   flutter_riverpod: ^2.6.1
-  logging: ^1.3.0
   riverpod_annotation: ^2.6.1
   firebase_core: ^3.13.0
   firebase_vertexai: ^1.5.0
