--- a/colorist/step_07/pubspec.yaml
+++ b/colorist/step_07/pubspec.yaml
@@ -1,6 +1,6 @@
 name: colorist
 description: "A new Flutter project."
-publish_to: "none"
+publish_to: 'none'
 version: 0.1.0
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  colorist_ui: ^0.0.7
+  colorist_ui: ^0.1.0
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   firebase_core: ^3.13.0
